fix: update image transition

--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -219,6 +219,14 @@
     }
   }
 
+  .TextWithDualCtaHeader__cta-wrapper {
+    img {
+      transition-property: opacity;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      transition-duration: 300ms;
+    }
+  }
+
   .TextWithDualCtaHeader__cta-wrapper:hover > a:not(:hover) {
     height: 132px;
 
