style: align CTA Card cta content to bottom

--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -75,6 +75,13 @@
   }
 }
 
+.ColumnsBlock,
+.CTACardsBlock {
+  .ChildBlockWrapper {
+    height: 100%;
+  }
+}
+
 .TwoUpBlock--layout-normal-50-50,
 .TwoUpBlock--layout-normal-40-60,
 .TwoUpBlock--layout-normal-60-40 {
