--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -220,6 +220,12 @@
   }
 
   .TextWithDualCtaHeader__cta-wrapper {
+    min-height: 432px;
+
+    @screen md {
+      height: 782px;
+    }
+
     img {
       transition-property: opacity;
       transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
