--- a/sanity/lib/styles.css
+++ b/sanity/lib/styles.css
@@ -26,6 +26,32 @@ div[data-testid='text-style--blockquote-large'] span {
   fill: #f9bb2c;
 }
 
+.Icon__input {
+  display: flex;
+  flex-direction: row;
+}
+.Icon__preview {
+  box-sizing: border-box;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 35px;
+  height: 35px;
+  border: 1px solid rgb(227, 228, 232);
+  padding: 3px;
+
+  div,
+  div > svg {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.Icon__inputField {
+  width: 100%;
+}
+
 div[data-testid='text-style--blockquote'] span {
   font-size: 22px;
   line-height: 130%;
