--- a/sanity/lib/styles.css
+++ b/sanity/lib/styles.css
@@ -1,9 +1,13 @@
 /* It seems like this is the only way to style custom Rich Text editor blocks */
 
-div[data-testid='text-style--blockquote-large'] span {
-  font-size: 28px;
-  line-height: 120%;
-  color: #7d320c;
+div[data-testid='text-style--blockquote-large'] {
+  margin-bottom: 28px;
+  span {
+    font-size: 28px;
+    line-height: 120%;
+    margin-bottom: 1em;
+    color: #7d320c;
+  }
 }
 
 /* Main wrapper classname for the rich text editor */
