feat: create FullWidthBackground component to handle full width background on the fly

--- a/www/src/styles/main.css
+++ b/www/src/styles/main.css
@@ -7,6 +7,7 @@
 
 /* Tailwind Utilities */
 @import 'tailwindcss/utilities';
+@import 'utilities/globalUtilityStyles.css';
 @import 'utilities/type-styles.css';
 
 /* Our styles */
