feat: update tabs animation classes to be generic

--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -119,11 +119,11 @@
   }
 }
 
-.TabsTab {
+.fadeUpElement {
   opacity: 1;
 }
 
-.TabsTab--inactive {
+.fadeUpElement--inactive {
   opacity: 0;
   pointer-events: none;
   height: 100%;
@@ -132,10 +132,10 @@
   top: 0;
 }
 
-.TabsTab--animated {
+.fadeUpElement--animated {
   transition: 0.2s;
   transition-delay: 0.2s;
-  &.TabsTab--inactive {
+  &.fadeUpElement--inactive {
     transition-delay: 0s;
     transform: translateY(10px);
   }
