--- a/www/src/styles/richText.css
+++ b/www/src/styles/richText.css
@@ -14,12 +14,12 @@
   ol {
     list-style: number;
     list-style-position: outside;
-    padding: 24px 0px;
+    padding: theme(spacing.6) 0px;
 
     li {
       padding-left: 20px;
       margin-left: 20px;
-      margin-top: 24px;
+      margin-top: theme(spacing.4);
     }
 
     li:first-child {
@@ -29,12 +29,12 @@
 
   ul {
     list-style: none;
-    padding: 24px 0px;
+    padding: theme(spacing.6) 0px;
 
     li {
       position: relative;
       padding-left: 40px;
-      margin-top: 24px;
+      margin-top: theme(spacing.4);
 
       &:before {
         content: '';
