--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -2,6 +2,8 @@
 @import 'contentBlocks/TwoUpBlock.css';
 @import 'contentBlocks/RichTextBlock.css';
 @import 'contentBlocks/ArticleRichText.css';
+@import 'contentBlocks/RichQuote.css';
+@import 'contentBlocks/OverlapDoubleImages.css';
 
 .CTACardsBlock {
   figure {
