feat: update styling of background image and hubspot form

--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -562,6 +562,10 @@ svg {
   textarea::placeholder {
     color: var(--text-color-primary);
   }
+
+  label {
+    @apply font-size-10 font-roobert;
+  }
 }
 
 #hubspot-form-wrapper {
