fix: show focus style when user use with keyboard

--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -397,7 +397,7 @@ svg {
     background-color: theme('colors.yellow-light');
   }
 
-  &:focus {
+  [data-whatintent='keyboard'] &:focus {
     border-color: var(--text-color-primary);
     outline: none;
   }
