--- a/www/src/styles/contentBlocks/TwoUpBlock.css
+++ b/www/src/styles/contentBlocks/TwoUpBlock.css
@@ -89,6 +89,7 @@
 .TwoUpBlock--layout-overlap-50-50 {
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   @screen lg {
     flex-direction: row;
@@ -127,10 +128,14 @@
     }
 
     &--imageChildBlock {
-      width: 100%;
       max-width: initial;
+
       @screen lg {
         width: calc(50% + 3rem);
+
+        img {
+          width: 100%;
+        }
       }
     }
 
