--- a/www/src/styles/contentBlocks/TwoUpBlock.css
+++ b/www/src/styles/contentBlocks/TwoUpBlock.css
@@ -1,6 +1,15 @@
 .TwoUpBlock {
+  padding-bottom: theme(spacing.4);
+  margin-top: theme(spacing.4);
+
+  @screen md {
+    padding-bottom: theme(spacing.8);
+    margin-top: theme(spacing.8);
+  }
+
   @screen lg {
-    margin: theme(spacing.12) 0;
+    padding-bottom: theme(spacing.12);
+    margin-top: theme(spacing.12);
   }
 }
 
