fix: fix video play bug (maybe) and fix styles

--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -69,22 +69,15 @@ img {
 }
 
 /* Video */
-.video {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
-  max-width: 100%;
-}
 
 .video iframe,
 .video object,
 .video embed {
-  position: absolute !important;
-  top: 0 !important;
-  left: 0 !important;
-  width: 100% !important;
-  height: 100% !important;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /* Hides caption from posterImage within video component */
