--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -4,6 +4,8 @@
 @import 'contentBlocks/ArticleRichText.css';
 @import 'contentBlocks/OverlapDoubleImages.css';
 @import 'contentBlocks/TextWithDualCtaHeader.css';
+@import 'contentBlocks/SmallImageCarouselBlock.css';
+@import 'contentBlocks/TestimonialBlock.css';
 
 .CTACard {
   figure {
