--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -4,6 +4,7 @@
 @import 'contentBlocks/ArticleRichText.css';
 @import 'contentBlocks/OverlapDoubleImages.css';
 @import 'contentBlocks/TextWithDualCtaHeader.css';
+@import 'contentBlocks/SubNav.css';
 
 .CTACard {
   figure {
@@ -15,46 +16,6 @@
     padding-top: 0;
     top: calc(100% + 0.35rem);
     left: 0;
-  }
-}
-
-.Subnav {
-  &__item {
-    .Subnav__item-circle {
-      transition: all 200ms;
-      width: 0px;
-      height: 0px;
-      max-width: 13px;
-      max-height: 13px;
-    }
-
-    &:hover {
-      .Subnav__item-circle {
-        width: 13px;
-        height: 13px;
-      }
-    }
-  }
-
-  &__mobile-inner-wrapper {
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-  }
-
-  &__mobile--avtice {
-    transform: translateY(0);
-  }
-
-  .Subnav__item-circle--active {
-    width: 13px;
-    height: 13px;
-  }
-
-  .Subnav__item-circle--active-top {
-    @screen lg {
-      width: 13px;
-      height: 13px;
-    }
   }
 }
 
