--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -21,6 +21,22 @@
   }
 }
 
+.DoubleCTA {
+  &__cta-card {
+    background-color: rgba(255, 255, 255, 0.9);
+    border-color: transparent;
+    border-width: 3px;
+
+    &:hover {
+      background-color: rgba(255, 255, 255, 1);
+    }
+
+    &:focus {
+      border-color: var(--text-color-primary);
+    }
+  }
+}
+
 .ColumnsBlock {
   .ChildBlockWrapper {
     height: 100%;
