--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -504,11 +504,20 @@ svg {
 .icon-link {
   transition: all 500ms ease;
   background-color: transparent;
-  border-bottom: 1px solid;
-  border-color: transparent;
 
   &:focus {
     background-color: var(--cta-bg-color-primary);
+  }
+}
+
+.element-focus {
+  transition: all 500ms ease;
+  border: 3px solid;
+  border-color: transparent;
+  border-radius: 16px;
+
+  &:focus {
+    border-color: var(--text-color-primary);
   }
 }
 
