--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -244,6 +244,7 @@ img {
   --cta-bg-color-primary: theme('colors.yellow');
   --cta-text-color-secondary: theme('colors.midnight');
   --cta-bg-color-secondary: theme('colors.grey');
+  --cta-border-color: theme('colors.midnight');
 
   --icon-base: theme('colors.yellow');
   --icon-overlap: theme('colors.yellow-dark');
@@ -260,6 +261,7 @@ img {
   --cta-bg-color-primary: theme('colors.yellow');
   --cta-text-color-secondary: theme('colors.midnight');
   --cta-bg-color-secondary: theme('colors.grey-medium');
+  --cta-border-color: theme('colors.midnight');
 
   --icon-base: theme('colors.yellow');
   --icon-overlap: theme('colors.orange');
@@ -276,6 +278,7 @@ img {
   --cta-bg-color-primary: theme('colors.yellow');
   --cta-text-color-secondary: theme('colors.yellow-light');
   --cta-bg-color-secondary: theme('colors.sienna-dark');
+  --cta-border-color: theme('colors.yellow-light');
 
   --icon-base: theme('colors.yellow');
   --icon-overlap: theme('colors.orange');
@@ -292,6 +295,7 @@ img {
   --cta-bg-color-primary: theme('colors.yellow');
   --cta-text-color-secondary: theme('colors.yellow-light');
   --cta-bg-color-secondary: theme('colors.midnight-light');
+  --cta-border-color: theme('colors.yellow-light');
 
   --icon-base: theme('colors.sky-medium');
   --icon-overlap: theme('colors.sky');
@@ -308,6 +312,7 @@ img {
   --cta-bg-color-primary: theme('colors.yellow');
   --cta-text-color-secondary: theme('colors.midnight');
   --cta-bg-color-secondary: theme('colors.sky-light');
+  --cta-border-color: theme('colors.midnight');
 
   --icon-base: theme('colors.sky-medium');
   --icon-overlap: theme('colors.sky-dark');
@@ -404,7 +409,7 @@ svg {
   }
 
   [data-whatintent='keyboard'] &:focus {
-    border-color: var(--text-color-primary);
+    border-color: var(--cta-border-color);
     outline: none;
   }
 
@@ -427,7 +432,6 @@ svg {
 
   &--outlined {
     border-width: 1px;
-    padding: 3px;
     color: var(--cta-text-color-secondary);
     background-color: var(--bg-color);
     border-color: var(--border-color);
@@ -438,12 +442,11 @@ svg {
 
     [data-whatintent='keyboard'] &:focus {
       border-width: 4px;
-      padding: 0px;
     }
 
     &:hover {
       background-color: var(--bg-color);
-      border-color: var(--text-color-primary);
+      border-color: var(--cta-border-color);
     }
 
     &.cta--active {
@@ -457,7 +460,7 @@ svg {
     transition: all 500ms ease;
     background-color: transparent;
     color: var(--text-color-primary);
-    border-color: var(--text-color-primary);
+    border-color: var(--cta-border-color);
     border-width: 0;
     border-bottom: 1px solid;
     height: 26px;
@@ -493,10 +496,10 @@ svg {
   border-color: transparent;
 
   &:hover {
-    border-color: var(--text-color-primary);
+    border-color: var(--cta-border-color);
   }
 
-  &:focus {
+  [data-whatintent='keyboard'] &:focus {
     background-color: var(--cta-bg-color-primary);
   }
 }
@@ -505,7 +508,7 @@ svg {
   transition: all 500ms ease;
   background-color: transparent;
 
-  &:focus {
+  [data-whatintent='keyboard'] &:focus {
     background-color: var(--cta-bg-color-primary);
   }
 }
@@ -516,8 +519,8 @@ svg {
   border-color: transparent;
   border-radius: 16px;
 
-  &:focus {
-    border-color: var(--text-color-primary);
+  [data-whatintent='keyboard'] &:focus {
+    border-color: var(--cta-border-color);
   }
 }
 
