--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -63,6 +63,28 @@
   }
 }
 
+.PractitionerCard {
+  &__link {
+    transition: all 500ms ease;
+
+    &:hover {
+      opacity: 0.7;
+    }
+
+    & > .GenericImage {
+      transition: all 500ms ease;
+      border: 3px solid;
+      border-color: transparent;
+    }
+
+    [data-whatintent='keyboard'] &:focus {
+      & > .GenericImage {
+        border-color: var(--cta-border-color);
+      }
+    }
+  }
+}
+
 .fadeUpElement {
   opacity: 1;
 }
