fix: update import

--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -4,7 +4,7 @@
 @import 'contentBlocks/ArticleRichText.css';
 @import 'contentBlocks/OverlapDoubleImages.css';
 @import 'contentBlocks/TextWithDualCtaHeader.css';
-@import 'contentBlocks/SubNav.css';
+@import 'contentBlocks/Subnav.css';
 @import 'contentBlocks/SmallImageCarouselBlock.css';
 @import 'contentBlocks/TestimonialBlock.css';
 
