fix: fix focus outline

--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -524,8 +524,8 @@ svg {
   border-radius: 8px;
 
   [data-whatintent='keyboard'] &:focus {
-    border: 3px solid;
-    border-color: var(--cta-border-color);
+    outline: 3px solid;
+    outline-color: var(--cta-border-color);
   }
 }
 
