--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -509,6 +509,22 @@ svg {
   }
 }
 
+.simple-text-link--with-underline {
+  transition: all 500ms ease;
+  background-color: transparent;
+  color: var(--text-color-primary);
+  border-bottom: 1px solid;
+  border-color: var(--text-color-primary);
+
+  &:hover {
+    border-color: transparent;
+  }
+
+  [data-whatintent='keyboard'] &:focus {
+    background-color: var(--cta-bg-color-primary);
+  }
+}
+
 .icon-link {
   transition: all 500ms ease;
   background-color: transparent;
