--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -98,6 +98,7 @@ img {
   line-height: 90%;
   letter-spacing: -0.04em;
   font-weight: 500;
+  text-wrap: balance;
 
   @screen md {
     font-size: 120px;
@@ -112,6 +113,7 @@ img {
   line-height: 90%;
   letter-spacing: -0.04em;
   font-weight: 500;
+  text-wrap: balance;
 
   @screen md {
     font-size: 72px;
@@ -126,6 +128,7 @@ img {
   line-height: 90%;
   letter-spacing: -0.03em;
   font-weight: 500;
+  text-wrap: balance;
 
   @screen md {
     font-size: 64px;
@@ -140,6 +143,7 @@ img {
   letter-spacing: -0.02em;
   line-height: 100%;
   font-weight: 500;
+  text-wrap: balance;
 
   @screen md {
     font-size: 43px;
@@ -154,6 +158,7 @@ img {
   line-height: 115%;
   letter-spacing: -0.015em;
   font-weight: 500;
+  text-wrap: balance;
 
   @screen md {
     font-size: 34px;
@@ -175,6 +180,7 @@ img {
   line-height: 120%;
   letter-spacing: -0.01em;
   font-weight: 500;
+  text-wrap: balance;
 
   @screen md {
     font-size: 26px;
@@ -195,6 +201,7 @@ img {
   font-size: 18px;
   line-height: 120%;
   font-weight: 400;
+  text-wrap: balance;
 
   @screen md {
     font-size: 21px;
@@ -208,6 +215,7 @@ img {
   font-size: 16px;
   line-height: 140%;
   font-weight: 400;
+  text-wrap: balance;
 
   @screen md {
     font-size: 18px;
@@ -224,6 +232,7 @@ img {
   line-height: 140%;
   letter-spacing: 0.02em;
   font-weight: 500;
+  text-wrap: balance;
 }
 
 .font-size-10 {
@@ -231,6 +240,7 @@ img {
   line-height: 140%;
   letter-spacing: 0.02em;
   font-weight: 400;
+  text-wrap: balance;
 }
 
 /**
