--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -2,6 +2,8 @@
   --container-lg-padding: 48px;
   --container-md-padding: 36px;
   --container-sm-padding: 16px;
+  --grid-margin-lg: min(3.33vw, 64px);
+  --grid-margin-sm: 16px;
 }
 
 html {
