--- a/www/src/styles/contentBlocks/ArticleRichText.css
+++ b/www/src/styles/contentBlocks/ArticleRichText.css
@@ -2,6 +2,7 @@
   > * {
     margin: 0;
     padding: 0;
+    margin-top: theme(spacing.4);
   }
 
   h2 {
@@ -39,6 +40,22 @@
   .ArticleRichTextQuote {
     blockquote {
       padding: 0;
+    }
+  }
+
+  .HubspotForm {
+    margin: theme(spacing.12) 0;
+    padding: theme(spacing.4);
+
+    /* .container-padding-bleed--margin-only-mobile-only; */
+    width: calc(
+      100% + var(--container-sm-padding) + var(--container-sm-padding)
+    );
+    margin-left: calc(0px - var(--container-sm-padding));
+
+    @screen md {
+      width: 100%;
+      margin-left: initial;
     }
   }
 }
