--- a/www/src/styles/contentBlocks/TwoUpBlock.css
+++ b/www/src/styles/contentBlocks/TwoUpBlock.css
@@ -168,7 +168,7 @@
 }
 
 .TwoUpBlock--tab-content {
-  margin-top: theme(spacing.4) !important;
+  margin-top: 0 !important;
 
   &.TwoUpBlock--layout-overlap-50-50 {
     padding-top: 0 !important;
