--- a/www/src/styles/richText.css
+++ b/www/src/styles/richText.css
@@ -64,6 +64,15 @@
     }
   }
 
+  &.RichText--align-center > .BigNumbers {
+    .BigNumber {
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
   .cta__inner a {
     border-bottom: none;
   }
