--- a/www/src/styles/contentBlocks.css
+++ b/www/src/styles/contentBlocks.css
@@ -23,9 +23,10 @@
 
 .DoubleCTA {
   &__cta-card {
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 0.7);
     border-color: transparent;
     border-width: 3px;
+    backdrop-filter: blur(30px);
 
     &:hover {
       background-color: rgba(255, 255, 255, 1);
