chore: run prettier

--- a/www/src/styles/contentBlocks/Subnav.css
+++ b/www/src/styles/contentBlocks/Subnav.css
@@ -17,6 +17,7 @@
 
     &:hover {
       .Subnav__item-circle {
+        background-color: theme('colors.yellow');
         width: 13px;
         height: 13px;
       }
