feat: add global  text highlight styles

--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -24,6 +24,11 @@ main {
   -webkit-font-smoothing: antialiased;
 }
 
+::selection {
+  background-color: theme('colors.yellow');
+  color: theme('colors.black');
+}
+
 .ContentArea {
   /* Add spacing between components  */
   > div + div {
