--- a/www/src/styles/main.css
+++ b/www/src/styles/main.css
@@ -19,5 +19,5 @@
 
 /* Webflow styles (specific for hardcoded JPMC page */
 @import 'fireflyHealthWebflow.css';
-@import 'fireflyHealthWebflowNormalizeCss.css';
+/* @import 'fireflyHealthWebflowNormalizeCss.css'; */
 /* @import 'fireflyHealthWebflowBase.css'; */
